kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /premium/song-details/
        pathType: Prefix
        backend:
          service:
            name: songcomments-service
            port:
              number: 80
      - path: /premium/playlist
        pathType: Prefix
        backend:
          service:
            name: playlist-service
            port:
              number: 80    
      - path: /regular/song-details/
        pathType: Prefix
        backend:
          service:
            name: songdetails-service
            port:
              number: 80 
      - path: /regular/search
        pathType: Prefix
        backend:
          service:
            name: searchservice-service
            port:
              number: 80
      - path: /regular/top-charts
        pathType: Prefix
        backend:
          service:
            name: topcharts-service
            port:
              number: 80
